--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>Dirk Neumann</title>
-<meta http-equiv=”refresh” content=”0;url=http://deepdist.com/deepdist/">
+<title>DeepDist - Dirk Neumann</title>
+<meta http-equiv="refresh" content="0;url=http://deepdist.com/deepdist/">
 </head>
 <body>
 </body>
